# ONNXim_

./: CMakeLists.txt  README.md  Simulator_test  conanfile.txt
example/: opt125m.json  opt125m_decode_single_layer.json  opt125m_decode_test.json  opt175b.json  opt66b.json
scripts/: generate_and_run_gemm_batch.sh  generate_gemm_onnx.sh
src/: Core.cc  Dram.cc  Mapping.cc
src/operations/: Attention.cc  Dummy.cc  GemmWS.cc
src/scheduler/: LanguageScheduler.cc  Scheduler.cc
tests/: CMakeLists.txt
